--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
     "name": "webpack-template",
     "version": "1.0.0",
     "main": "index.js",
-    "type": "module",
     "scripts": {
         "test": "jest"
     },
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@babel/core": "^7.25.2",
+        "@babel/preset-env": "^7.25.4",
+        "babel-jest": "^29.7.0",
         "eslint": "^8.57.0",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-prettier": "^9.1.0",
