--- a/package.json
+++ b/package.json
@@ -3,21 +3,32 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-        "test": "jest"
+        "test": "jest",
+        "build": "webpack",
+        "dev": "webpack serve",
+        "deploy": "git subtree push --prefix dist origin gh-pages"
     },
+
     "author": "",
     "license": "ISC",
     "devDependencies": {
         "@babel/core": "^7.25.2",
         "@babel/preset-env": "^7.25.4",
         "babel-jest": "^29.7.0",
+        "babel-loader": "^9.2.1",
+        "css-loader": "^7.1.2",
         "eslint": "^8.57.0",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-import": "^2.29.1",
+        "html-loader": "^5.1.0",
+        "html-webpack-plugin": "^5.6.0",
         "jest": "^29.7.0",
-        "webpack": "^5.91.0",
-        "webpack-cli": "^5.1.4"
+        "style-loader": "^4.0.0",
+        "webpack": "^5.94.0",
+        "webpack-cli": "^5.1.4",
+        "webpack-dev-server": "^5.1.0",
+        "webpack-merge": "^6.0.1"
     },
     "dependencies": {
         "acorn": "^8.11.3",
@@ -99,7 +110,6 @@
         "update-browserslist-db": "^1.0.13",
         "uri-js": "^4.4.1",
         "watchpack": "^2.4.1",
-        "webpack-merge": "^5.10.0",
         "webpack-sources": "^3.2.3",
         "which": "^2.0.2",
         "wildcard": "^2.0.1"
